# personal-ai

./: .gitignore  ARCHITECTURE.md  README.md  UNIFIED.md  wrangler.jsonc
personal-ai-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  N8N_VS_PYTHON.md  README.md  docker-compose.yml  pyproject.toml  start.bat
personal-ai-backend/src/: config.py  main.py
personal-ai-backend/src/agents/: clinical.py  conversational.py  router.py  scoring.py
personal-ai-backend/src/channels/: telegram.py
personal-ai-backend/src/db/: __init__.py  connection.py  (+4 more)
personal-ai-frontend/: .dockerignore  Dockerfile  README.md  index.html  orb copy 2.html  orb copy 3.html  orb.html  package-lock.json  package.json  vite.config.ts
personal-ai-frontend/public/: manifest.json  sw.js
personal-ai-frontend/src/: routeTree.gen.ts  styles.css
salux-ai-backend/: N8N_VS_PYTHON.md  README.md  SALUX.md  pyproject.toml  start.bat
salux-ai-backend/src/: config.py  main.py
salux-ai-backend/src/agents/: clinical.py  conversational.py  router.py  scoring.py
salux-ai-backend/src/channels/: telegram.py
salux-ai-backend/src/models/: clinical.py  financial.py  operational.py
salux-ai-backend/src/tools/: llm_tools.py  mock_data.py  scoring_tools.py
salux-ai-backend/tests/: test_scoring.py
salux-ai-frontend/: README.md  index.html  orb copy 2.html  orb copy 3.html  orb.html  package-lock.json  package.json
salux-ai-frontend/favicon_io/: favicon.ico(copia)
salux-ai-frontend/public/: manifest.json  sw.js
salux-ai-frontend/src/: entry-client.tsx  entry-server.tsx  styles.css
(+27 files in other folders)
